# designate-dashboard

./: .eslintrc  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  karma.conf.js  lower-constraints.txt  manage.py  package.json  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
designate-dashboard/locale/: designate-dashboard.pot
designate-dashboard/locale/fr/LC_MESSAGES/: designate-dashboard.po
designate-dashboard/locale/ja/LC_MESSAGES/: designate-dashboard.po
designate-dashboard/locale/ru/LC_MESSAGES/: designate-dashboard.po
designate-dashboard/locale/tr_TR/LC_MESSAGES/: designate-dashboard.po
designatedashboard/: __init__.py  sdk_connection.py
designatedashboard/api/: designate.py
designatedashboard/api/rest/: __init__.py  designate.py  passthrough.py
designatedashboard/dashboards/project/dns_domains/: forms.py  tables.py  urls.py  utils.py  views.py
designatedashboard/dashboards/project/dns_domains/templates/dns_domains/: _create_domain.html  _create_record.html  _update_domain.html  _update_record.html  domain_detail.html  records.html  (+3 more)
designatedashboard/dashboards/project/ngdns/: __init__.py
designatedashboard/dashboards/project/ngdns/reverse_dns/: panel.py  urls.py
designatedashboard/dashboards/project/ngdns/zones/: panel.py  urls.py
designatedashboard/enabled/: _1710_project_dns_panel_group.py  _1720_project_dns_panel.py  _1721_dns_zones_panel.py  _1722_dns_reversedns_panel.py
designatedashboard/local_settings.d/: _1799_dns_settings.py
designatedashboard/locale/: django.pot
designatedashboard/locale/cs/LC_MESSAGES/: django.po
designatedashboard/locale/de/LC_MESSAGES/: django.po
designatedashboard/locale/en_GB/LC_MESSAGES/: django.po
designatedashboard/locale/eo/LC_MESSAGES/: django.po
designatedashboard/locale/es/LC_MESSAGES/: django.po
designatedashboard/locale/fr/LC_MESSAGES/: django.po
designatedashboard/locale/id/LC_MESSAGES/: django.po
designatedashboard/locale/ja/LC_MESSAGES/: django.po
designatedashboard/locale/ko_KR/LC_MESSAGES/: django.po
designatedashboard/locale/lo/LC_MESSAGES/: django.po
designatedashboard/locale/ne/LC_MESSAGES/: django.po
designatedashboard/locale/pt_BR/LC_MESSAGES/: django.po
designatedashboard/locale/ru/LC_MESSAGES/: django.po
designatedashboard/locale/tr_TR/LC_MESSAGES/: django.po
designatedashboard/locale/zh_CN/LC_MESSAGES/: django.po
designatedashboard/locale/zh_Hans/LC_MESSAGES/: django.po
designatedashboard/static/designatedashboard/: designatedashboard.module.js  reverse_dns.html  zones.html
designatedashboard/static/designatedashboard/resources/: resources.module.js  util.service.js
designatedashboard/static/designatedashboard/resources/os-designate-floatingip/: api.service.js  os-designate-floatingip.module.js
designatedashboard/static/designatedashboard/resources/os-designate-recordset/: api.service.js  os-designate-recordset.module.js
designatedashboard/static/designatedashboard/resources/os-designate-zone/: api.service.js  os-designate-zone.module.js
designatedashboard/tests/: __init__.py  base.py  settings.py  test_designatedashboard.py  test_ptr_record_form.py  test_spf_record_form.py  test_sshfp_record_form.py
doc/: requirements.txt
doc/source/: conf.py  index.rst
releasenotes/notes/: drop-py-2-7-ae8cade4a0ee1da8.yaml  min-openstacksdk-b7e4661f8800bb9c.yaml  openstacksdk-11483491f9978bd1.yaml  remove-designateclient-e98963b8baa4aa4f.yaml  remove-oslo-log-078df11995380f36.yaml  removed-v1-dashboard-56d4697d57baef09.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/cs/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/de/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/id/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ja/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ko_KR/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ne/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/pt_BR/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ru/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/zh_CN/LC_MESSAGES/: releasenotes.po
(+29 files in other folders)
