[metadata]
name = designate-dashboard
summary = Designate Horizon UI bits
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/developer/designate-dashboard/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    designatedashboard

[compile_catalog]
directory = designatedashboard/locale
domain = django

[update_catalog]
domain = django
output_dir = designatedashboard/locale
input_file = designatedashboard/locale/django.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel-django.cfg
output_file = designatedashboard/locale/django.pot
